--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,16 @@
 plugins {
+    id 'idea'
     id 'java'
     id 'war'
 }
 
-group 'com.codegym'
+idea {
+    module {
+        downloadSources = true
+    }
+}
+
+group 'vn.codegym'
 version '1.0-SNAPSHOT'
 
 repositories {
@@ -24,6 +31,7 @@ tasks.withType(JavaCompile) {
 }
 
 dependencies {
+    compileOnly group: 'org.jetbrains', name: 'annotations', version: '23.0.0'
     compileOnly group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.1'
     implementation group: 'javax.servlet', name: 'jstl', version: '1.2'
     implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.23'
