--- a/build.gradle
+++ b/build.gradle
@@ -33,4 +33,6 @@ dependencies {
 	compileOnly group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.1'
 	implementation group: 'javax.servlet', name: 'jstl', version: '1.2'
 	implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.23'
+	implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.3'
+	implementation group: 'org.slf4j', name: 'slf4j-simple', version: '2.0.3'
 }
